--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -214,12 +214,21 @@ footer .social a {
 
 
 /* CV */
-
 .cv-index{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    font-size: 1.5rem;
+}
+.cv-index a:hover{
+    color: var(--orange);
+    text-decoration: none;
+    transition: all 0.3s ease-out;
+}
 
+.cv-index a:hover{
+    box-shadow: inset 0 -2px 0 var(--orange);
+    opacity: 0.8;
 }
 
 .hello-cv{
@@ -228,7 +237,7 @@ footer .social a {
 
 .hello-cv article h1{
     margin-top: 40px;
-    color: rgb(65, 65, 65);
+    color: #333;
     font-size: 3rem;
 }
 .hello-cv article p{
@@ -330,6 +339,73 @@ footer .social a {
 .webimpacto-img ~ figcaption{
     margin-left: 50px;
 }
+
+
+
+/* PROYECTOS */
+.projects-category h1{
+    font-size: 4rem;
+    font-weight: 900;
+    color: #333;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.projects-category p{
+    font-size: 1.8rem;
+}
+.projects-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 100%;
+    border-radius: 5px;
+}
+.project{
+    width: 300px;
+    height: 450px;
+    margin: 25px 25px;
+    background-color: #f2f2f2;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+.project div p.text-right{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
+.project div p.text-right a{
+    color: var(--orange);
+    transition: all 0.3s ease;
+}
+.project div p.text-right a:hover{
+    
+    opacity: 0.8;
+}
+
+.project div h3{
+    font-weight: bold;
+    padding: 10px;
+}
+.project div p{
+    padding: 10px
+}
+.img-project{
+    width: 300px;
+    border-radius: 5px;
+    transition: all 0.3s ease-out;
+}
+.img-project:hover{
+    opacity: 0.5;
+    box-shadow: inset 0 -1px 0 var(--orange);
+}
+
+
+
 
 @media (max-width: 767px){
     .cv-index{
@@ -455,5 +531,15 @@ footer .social a {
     }
     .cv-edu li, .cv-contact li, .cv-skills li{
         font-size: 1.4rem;
+    }
+    .projects-category h1{
+        font-size: 2rem;
+        font-weight: 900;
+        color: #333;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+    .projects-category p{
+        font-size: 1.5rem;
     }
 }
