--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -333,6 +333,14 @@ footer .social a {
 .webimpacto-img ~ figcaption{
     margin-left: 50px;
 }
+#educacion li a{
+    color: var(--orange);
+    transition: all 0.3s ease-out;
+}
+#educacion li a:hover{
+    color: rgb(240, 195, 128);
+}
+
 
 
 
@@ -355,6 +363,7 @@ footer .social a {
     height: 100%;
     border-radius: 5px;
 }
+
 .project{
     width: 300px;
     height: 450px;
@@ -366,7 +375,16 @@ footer .social a {
     flex-direction: column;
     border-radius: 5px;
     border: 1px solid black;
+    box-shadow: 1px 1px 5px 1px #333;
+    /* transition: all 20s ease; */
+    /* animation-name: efecto;
+    animation-duration: 2s;
+    animation-timing-function: ease-in;
+    animation-iteration-count: infinite; */
 }
+/* .project:hover{
+    transform: rotate(-360deg);
+} */
 .project div p.text-right{
     display: flex;
     align-items: flex-end;
@@ -466,11 +484,12 @@ footer .social a {
     justify-content: center;
     align-items: center;
     margin: 20px auto;
-    width: auto;
+    width: 35%;
     max-width: 700px;
-    height: 75vh;
+    height: 70vh;
     border-radius: 5px;
     font-weight: 900;
+    box-shadow: 1px 1px 12px 2px #333;
 }
 
 
@@ -505,7 +524,11 @@ footer .social a {
         height: 15vh;
     }
     .form-container{
-        margin: 20px 20px;
+        font-size: 1rem;
+        width: 55%;
+    }
+    form legend{
+        font-size: 1.45rem;
     }
 }
 
@@ -651,6 +674,13 @@ footer .social a {
     .section-2-ahora ol>a small{
         font-size: 1rem;
         font-weight: bold !important;
+    }
+    .form-container{
+        font-size: 1rem;
+        width: 85%;
+    }
+    form legend{
+        font-size: 1.45rem;
     }
 }
 
