--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -19,6 +19,11 @@ body{
     align-items: center;
 }
 
+.border-header{
+    border-bottom: 1px solid rgb(228, 228, 228);
+    margin-bottom: 20px;
+}
+
 .logo{
     width: auto;
 }
